修正guidedLDA部分錯誤

--- a/week09/topic_model_zh_udn.ipynb
+++ b/week09/topic_model_zh_udn.ipynb
@@ -5876,8 +5876,11 @@
     "# 整理／顯示主題模型結果\n",
     "n_top_words = 10\n",
     "topic_word = model.topic_word_\n",
+    "# 取得corpus全部的詞彙表\n",
+    "vocab = tuple(dictionary.token2id.keys())\n",
     "\n",
     "for i, topic_dist in enumerate(topic_word):\n",
+    "    # 依照詞語機率從小到大排序，找出每個主題的前十個關鍵詞\n",
     "    topic_words = np.array(vocab)[np.argsort(topic_dist)][: -(n_top_words + 1) : -1]\n",
     "    print(\"Topic {}: {}\".format(i, \" \".join(topic_words)))\n",
     "    \n",
